# rag

./: README.md  pyproject.toml  record_manager.sql
chat-langchain/: Dockerfile  Makefile  Procfile  chain.py  env.md  ingest.py  main.py  pyproject.toml  record_manager.sql  sqlalchemyloader.py  testwe.py
chat-langchain/chat-langchain/: package-lock.json
chat-langchain/chat-langchain/app/utils/: constants.tsx
paper/: readme.md
rag/: .env  demo.py  start.sh
rag/data/: company1.md  policy1.md  policy2.md
rag/example/: case.py
