[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["yin1991 <84140478+xiaokuili@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.0.10"
bs4 = "^0.0.1"
langchain = "^0.1.0"
python-dotenv = "^1.0.0"
qianfan = "^0.2.6"
chromadb = "^0.4.22"
pysqlite3-binary = "^0.5.2.post2"
langchain-openai = "^0.0.2"
langchainhub = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
